# gugu

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
config/: settings.yaml  strategy_defaults.yaml
docs/: ITERATION_1.md  ITERATION_1_REVIEW.md  ITERATION_2.md  ITERATION_3.md  ITERATION_4.md  ITERATION_5.md  ITERATION_6.md  PRODUCT.md  PROJECT_LANDSCAPE_ANALYSIS.md  TECH.md
scripts/: compare_wisdom.py  evaluate_strategies.py  quickstart.py  run_backtest.py  run_live.py  run_paper.py  run_web.py  scan_stocks.py  show_portfolio.py  test_filtered.py  test_signal.py  trace_dataflow.py  validate_cognitive.py  verify_feishu.py
src/gugu/: _legacy_config.py  config.py
src/gugu/analysis/: __init__.py  alpha_factory.py  danger_signal.py  execution_optimizer.py  no_average_down.py  param_optimizer.py  performance.py  regime_detector.py  (+9 more)
tests/: conftest.py
tests/fixtures/: benchmark_600519.csv
tests/integration/: test_e2e_pipeline.py
tests/unit/: test_alpha_factory.py  test_analysis.py  test_backtest.py  test_backtest_benchmark.py  test_collectors.py  test_data.py  test_data_manager.py  test_data_manager_extended.py  test_data_quality.py  test_engine.py  test_event_engine.py  test_execution.py  test_feishu_notifier.py  test_filters.py  test_generator.py  test_notifier.py  test_p0_wisdom.py  test_position.py  test_risk.py  test_scheduler.py  test_selector.py  test_signal_pipeline.py  test_signal_router.py  test_stock_ranker.py  test_strategies.py  test_strategies_benchmark.py  test_technical.py  test_trailing_stop.py  test_utils.py  test_web_api.py  test_wisdom.py
(+101 files in other folders)
